fixed the card layout issues on the projects page and decentered the main page

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,8 +1,8 @@
 .navbar {
-    background-color: white;
-    color: black;
+    background-color: #283655;
+    color: #D0E1F9;
 }
 
 .nav-link {
-    color: black !important;
+    color: #D0E1F9 !important;
 }
